--- a/src/App.css
+++ b/src/App.css
@@ -7,41 +7,69 @@
 
 .header {
   border-bottom: 1px solid #cecece;
-  padding: 10px 0px;
+  padding: 20px 0px;
   font-size: 1.5rem;
   font-weight: bold;
 }
 
 .content {
   /* padding-top: 1rem; */
-  padding: 1rem;
+  padding: 20px;
   display: flex;
   justify-content: center;
 }
 
 .board-container {
+  border: 1px solid #cecece;
   display: grid;
   flex-direction: column;
-  gap: 5px;
+  gap: 0px;
   grid-template-columns: 1fr 1fr 1fr;
 }
 
-.board-row {
-  flex-direction: row;
-  display: flex;
-  gap: 5px;
-}
-
 .board-cell {
-  height: 60px;
-  width: 60px;
-  border: 2px solid #cecece;
+  height: 100px;
+  width: 100px;
+  border: 1px solid #cecece;
   border-radius: 0px;
   background-color: #ffffff;
-  font-size: 2rem;
+  font-size: 3rem;
   color: black;
   font-weight: bold;
   cursor: pointer;
+}
+
+.mid-section {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+
+.victory {
+  font-size: 1.2rem;
+  padding: 20px;
+  width: 300px;
+  border: 1px solid #cecece;
+  border-radius: 10px;
+  /* width: 200px; */
+  display: flex;
+  flex-direction: column;
+}
+
+.victory p {
+  margin-bottom: 10px;
+  margin-top: 0px;
+}
+
+.victory-btn {
+  border-radius: 90px;
+  border: 2px solid rgba(17, 17, 17, 0.87);
+  background-color: rgba(17, 17, 17, 0.87);
+  color: white;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 1.1rem;
 }
 
 .footer {
@@ -49,10 +77,10 @@
 }
 
 .footer-btn {
-  padding: 10px 20px;
+  padding: 15px 40px;
   border: 1px solid black;
   border-radius: 90px;
-  font-size: 1rem;
+  font-size: 1.2rem;
   background: #ffffff;
   cursor: pointer;
 }
